--- a/source/solution_notebook.ipynb
+++ b/source/solution_notebook.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "\n",
     "The group used the following files from AIMA code:\n",
-    "- csp.py [especificar funçoes]\n",
-    "- utils.py [especificar funçoes]\n",
-    "- search.py [especificar funçoes]"
+    "- csp.py\n",
+    "- utils.py\n",
+    "- search.py"
    ]
   },
   {
