--- a/source/solution_notebook.ipynb
+++ b/source/solution_notebook.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# Problem formulation\n",
     "The goal of this agent is to return a schedule that satisfies all the constraints specified, after receiving as input a set of data relative to classes, subjects and rooms.  \n",
-    "Some of the constraints are specified in the Project Guide, but the group decided to add even more to make the problem seem more realistic and similar to a real world problem."
+    "Some of the constraints are specified in the Project Guide, but the group decided to add even more, to make the problem feel more realistic and similar to a real world situation."
    ]
   },
   {
