Notebook update (might be final version?)

--- a/source/solution_notebook.ipynb
+++ b/source/solution_notebook.ipynb
@@ -56,7 +56,7 @@
     "- L0.st -> start time of Lesson 0\n",
     "- L0.r -> the room where Lesson 0 is attended\n",
     "\n",
-    "This is a small exemple of a result given by the script main.py, to explain how the result uses variables:\n",
+    "This is a small example of a result given by the script main.py, to explain how the result uses variables:\n",
     "```"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "As you can see, the class 1 has 10 Lessons (from 0 to 9).  \n",
-    "In the first lesson (L0), we assigned the fd - free day - and the fr - favourite room."
+    "In the first lesson (L0), we assigned the fd - free day - and the fr - favourite room - of class 1."
    ]
   },
   {
@@ -201,10 +201,10 @@
     "To be able to return a good solution, that satisfies real life restrictions when creating a schedule (for example, a class can't be in two lessons at the same time), the group had to create Constraints that are passed to the algorithm solver in order to create a realistic solution.\n",
     "\n",
     "**We have created the following constraints:**\n",
-    "- A class can't be in two lessons at the same time\n",
+    "- A class can't be in two lessons at the same time;\n",
     "- A subject can't be in two lessons at the same time;\n",
     "    - Assuming that there is only a teacher for each subject.\n",
-    "- A room can't be in two lessons at the same, unless it's online;\n",
+    "- A room can't be in two lessons at the same time, unless it's online;\n",
     "    - Two classes can have an online lesson at the same time, but two classes can't have two lessons in the same presential room.\n",
     "- A presential lesson can't be booked in the same day of an online lesson (per class);\n",
     "    - This reduces trips to IPCA, and because of this constraint, there will be an \"online day\", plus the free day, so the class will only have to go to IPCA 3 days per week.\n",
@@ -367,6 +367,57 @@
     "dict_solver = ac_solver(class_scheduling, arc_heuristic=sat_up)\n",
     "print(dict_solver)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results obtained\n",
+    "Using the previously mentioned dictionaries and restrictions, we ran the script and got some results.\n",
+    "### 1st run\n",
+    "```\n",
+    "{'L0.fd': 5, 'L0.fr': 1, 'L0.c': 1, 'L1.c': 1, 'L2.c': 1, 'L3.c': 1, 'L4.c': 1, 'L5.c': 1, 'L6.c': 1, 'L7.c': 1, 'L8.c': 1, 'L9.c': 1, 'L10.fd': 2, 'L10.fr': 2, 'L10.c': 2, 'L11.c': 2, 'L12.c': 2, 'L13.c': 2, 'L14.c': 2, 'L15.c': 2, 'L16.c': 2, 'L17.c': 2, 'L18.c': 2, 'L19.c': 2, 'L0.su': 4, 'L0.d': 2, 'L0.w': 6, 'L0.st': 10, 'L0.r': 2, 'L1.su': 4, 'L1.d': 2, 'L1.w': 3, 'L1.st': 8, 'L1.r': 0, 'L2.su': 5, 'L2.d': 2, 'L2.w': 2, 'L2.st': 8, 'L2.r': 2, 'L3.su': 1, 'L3.d': 2, 'L3.w': 4, 'L3.st': 8, 'L3.r': 2, 'L4.su': 3, 'L4.d': 2, 'L4.w': 4, 'L4.st': 10, 'L4.r': 1, 'L5.su': 1, 'L5.d': 2, 'L5.w': 2, 'L5.st': 12, 'L5.r': 2, 'L6.su': 2, 'L6.d': 2, 'L6.w': 3, 'L6.st': 10, 'L6.r': 0, 'L7.su': 3, 'L7.d': 2, 'L7.w': 2, 'L7.st': 10, 'L7.r': 2, 'L8.su': 2, 'L8.d': 2, 'L8.w': 6, 'L8.st': 8, 'L8.r': 1, 'L9.su': 5, 'L9.d': 2, 'L9.w': 4, 'L9.st': 12, 'L9.r': 1, 'L10.su': 3, 'L10.d': 2, 'L10.w': 6, 'L10.st': 8, 'L10.r': 2, 'L11.su': 2, 'L11.d': 2, 'L11.w': 6, 'L11.st': 10, 'L11.r': 1, 'L12.su': 1, 'L12.d': 2, 'L12.w': 3, 'L12.st': 12, 'L12.r': 1, 'L13.su': 5, 'L13.d': 2, 'L13.w': 3, 'L13.st': 10, 'L13.r': 1, 'L14.su': 3, 'L14.d': 2, 'L14.w': 3, 'L14.st': 8, 'L14.r': 1, 'L15.su': 5, 'L15.d': 2, 'L15.w': 4, 'L15.st': 8, 'L15.r': 0, 'L16.su': 1, 'L16.d': 2, 'L16.w': 5, 'L16.st': 8, 'L16.r': 1, 'L17.su': 2, 'L17.d': 2, 'L17.w': 5, 'L17.st': 12, 'L17.r': 1, 'L18.su': 4, 'L18.d': 2, 'L18.w': 4, 'L18.st': 10, 'L18.r': 0, 'L19.su': 4, 'L19.d': 2, 'L19.w': 5, 'L19.st': 10, 'L19.r': 1}\n",
+    "--- 97.95724511146545 seconds ---\n",
+    "```\n",
+    "As you can see, in 100 seconds, we were able to get a schedule that satisfies all the constraints.\n",
+    "\n",
+    "![Image_Run1](./imgs_nb/run1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, each class has a day without classes and a day with online classes only.  \n",
+    "There is no room or subject overlap.  \n",
+    "There are no gaps between lessons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2nd run (before \"no gap\" constraint)\n",
+    "This execution was before the \"no gap\" constraint.\n",
+    "\n",
+    "![Image_Run2](./imgs_nb/before_no_gap.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, we were getting gaps between lessons (check the schedule relative to Class 2 - day 5, between subject 5 and 3.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3rd run (after \"no gap\" constraint)\n",
+    "After creating the \"no gap\" constraint, we got great results without gaps between lessons, as you can see below.\n",
+    "![Img_Run3](./imgs_nb/after_no_gap.png)"
    ]
   },
   {
